# goquant

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  IMPLEMENTATION_COMPLETE.md  PROJECT_SUMMARY.md  README.md  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
demo/: oracle-demo.ts
oracle-service/: Cargo.toml
oracle-service/src/: aggregator.rs  api.rs  cache.rs  lib.rs  main.rs  manager.rs  types.rs  websocket.rs
oracle-service/src/clients/: mod.rs  pyth.rs  switchboard.rs
programs/oracle-integration/: cargo.toml
programs/oracle-integration/src/: lib.rs
tests/: oracle-integration.test.ts
