[package]
name = "oracle-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database and Cache
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Solana & Oracle SDKs
solana-client = "1.18"
solana-sdk = "1.18" 
pyth-sdk-solana = "0.10"
switchboard-solana = "0.30"

# WebSocket & HTTP
reqwest = { version = "0.11", features = ["json"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenv = "0.15"

# Statistics & Math
statrs = "0.16"